--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,37 @@
+/* Import nprogress styles */
+@import 'nprogress/nprogress.css';
 @import url('https://fonts.googleapis.com/css2?family=Changa:wght@200..800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+/* Optional: Customize the nprogress bar */
+#nprogress .bar {
+@apply bg-darkBlue;
+  height: 3px;
+}
+
+#nprogress .spinner-icon {
+@apply border-t-darkBlue border-l-darkBlue;
+}
+
 body{
   direction: rtl;
   font-family: 'Changa';
+}
+
+.loader {
+  border-width: 4px;
+  border-style: solid;
+  border-radius: 9999px;
+  width: 3rem;
+  height: 3rem;
+  border-color: blue transparent blue transparent;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
